<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="app_name">Setup</string>
   <string name="action_settings">Settings</string>
   <string name="hello_world">Hello world!</string>
   <string name="prefs_category_one">category one</string>
   <string name="prefs_summ_category_one">sum category one</string>
   <string name="prefs_category_two">category two</string>
   <string name="prefs_summ_category_two">sum category two</string>

                <string name="fifteen_minutes">Negyedóra</string>
                <string name="thirty_minutes">Félóra</string>
                <string name="fourtyfive_minutes">Háromnegyedóra</string>
                <string name="sixty_minutes">Egész óra</string>
                <string name="allowed">engedélyezve</string>
                <string name="summary_minutes15allowed">ha bekapcsolva, a telefon 15 percenként jelez az alábbi paraméterekkel</string>
                <string name="summary_minutes30allowed">ha bekapcsolva, a telefon 30 percenként jelez az alábbi paraméterekkel</string>
                <string name="summary_minutes45allowed">ha bekapcsolva, a telefon 45 percenként jelez az alábbi paraméterekkel</string>
                <string name="summary_minutes60allowed">ha bekapcsolva, a telefon egész óránként jelez az alábbi paraméterekkel</string>
                <string name="ringinsilent">mindig szól</string>
                <string name="summary_ringinsilent">ha bekapcsolva, a telefon csöndes üzemmódban is jelez</string>
                <string name="sound">hang</string>
                <string name="summary_sound">a kiválasztott csengőhang</string>
                <string name="sound_dialog_title">hang</string>
                <string-array name="sound_entries">
                   <item >hangtál</item>
                   <item >csengő</item>
                   <item >harang</item>
                   </string-array>
                <string-array name="sound_values">
                   <item >1</item>
                   <item >2</item>
                   <item >3</item>
                   </string-array>
                   
                <string name="dialog_based_preferences">dialog_based_preferences</string>
                <string name="title_edittext_preference">title_edittext_preference</string>
                <string name="summary_edittext_preference">summary_edittext_preference</string>
                <string name="dialog_title_edittext_preference">dialog_title_edittext_preference</string>
                <string name="title_list_preference">title_list_preference</string>
                <string name="summary_list_preference">summary_list_preference</string>
                <string name="entries_list_preference">entries_list_preference</string>
                <string name="entryvalues_list_preference">entryvalues_list_preference</string>
                <string name="dialog_title_list_preference">dialog_title_list_preference</string>
                <string name="launch_preferences">launch_preferences</string>
                <string name="title_screen_preference">title_screen_preference</string>
                <string name="summary_screen_preference">summary_screen_preference</string>
                <string name="title_next_screen_toggle_preference">title_next_screen_toggle_preference</string>
                <string name="summary_next_screen_toggle_preference">summary_next_screen_toggle_preference</string>
                <string name="title_intent_preference">title_intent_preference</string>
                <string name="summary_intent_preference">summary_intent_preference</string>
                <string name="preference_attributes">preference_attributes</string>
                <string name="title_parent_preference">title_parent_preference</string>
                <string name="summary_parent_preference">summary_parent_preference</string>
                <string name="title_child_preference">title_child_preference</string>
                <string name="summary_child_preference">summary_child_preference</string>
   
</resources>
