<!--
General settings
15 minutes settings - on-off
2.) Dallam
   lista-> 1, 2, 3
android:fragment="com.example.prefs.SettingsActivity$SettingsFragmentOne"
3.) Hangerő 
http://developer.android.com/guide/topics/ui/settings.html#Custom
 -->
<PreferenceScreen
   xmlns:android="http://schemas.android.com/apk/res/android">

   <PreferenceCategory
      android:title="@string/fifteen_minutes">
      <SwitchPreference
         android:key="minutes15allowed"
         android:title="@string/allowed"
         android:summary="@string/summary_minutes15allowed" />
      <ListPreference
         android:key="minutes15sound"
         android:title="@string/sound"
         android:summary="@string/summary_sound"
         android:entries="@array/sound_entries"
         android:entryValues="@array/sound_values"
         android:dialogTitle="@string/sound_dialog_title"
         android:dependency="minutes15allowed" />
      <CheckBoxPreference
         android:key="minutes15ringinsilent"
         android:title="@string/ringinsilent"
         android:summary="@string/summary_ringinsilent"
         android:dependency="minutes15allowed" />
      </PreferenceCategory>
      
   <PreferenceCategory
      android:title="@string/thirty_minutes">
      <SwitchPreference
         android:key="minutes30allowed"
         android:title="@string/allowed"
         android:summary="@string/summary_minutes30allowed" />
      <ListPreference
         android:key="minutes30sound"
         android:title="@string/sound"
         android:summary="@string/summary_sound"
         android:entries="@array/sound_entries"
         android:entryValues="@array/sound_values"
         android:dialogTitle="@string/sound_dialog_title"
         android:dependency="minutes30allowed" />
      <CheckBoxPreference
         android:key="minutes30ringinsilent"
         android:title="@string/ringinsilent"
         android:summary="@string/summary_ringinsilent"
         android:dependency="minutes30allowed" />
      </PreferenceCategory>
   
   <PreferenceCategory
      android:title="@string/dialog_based_preferences">
      <EditTextPreference
         android:key="edittext_preference"
         android:title="@string/title_edittext_preference"
         android:summary="@string/summary_edittext_preference"
         android:dialogTitle="@string/dialog_title_edittext_preference" />

      <ListPreference
         android:key="list_preference"
         android:title="@string/title_list_preference"
         android:summary="@string/summary_list_preference"
         android:entries="@array/sound_entries"
         android:entryValues="@array/sound_values"
         android:dialogTitle="@string/dialog_title_list_preference" />

      </PreferenceCategory>

   <PreferenceCategory
      android:title="@string/launch_preferences">

        <!-- This PreferenceScreen tag serves as a screen break (similar to page break
             in word processing). Like for other preference types, we assign a key
             here so it is able to save and restore its instance state. -->
        <PreferenceScreen
                android:key="screen_preference"
                android:title="@string/title_screen_preference"
                android:summary="@string/summary_screen_preference">

            <!-- You can place more preferences here that will be shown on the next screen. -->

            <CheckBoxPreference
                    android:key="next_screen_checkbox_preference"
                    android:title="@string/title_next_screen_toggle_preference"
                    android:summary="@string/summary_next_screen_toggle_preference" />

        </PreferenceScreen>

        <PreferenceScreen
                android:title="@string/title_intent_preference"
                android:summary="@string/summary_intent_preference">

            <intent android:action="android.intent.action.VIEW"
                    android:data="http://www.android.com" />

        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/preference_attributes">

        <CheckBoxPreference
                android:key="parent_checkbox_preference"
                android:title="@string/title_parent_preference"
                android:summary="@string/summary_parent_preference" />

        <!-- The visual style of a child is defined by this styled theme attribute. -->
        <CheckBoxPreference
                android:key="child_checkbox_preference"
                android:dependency="parent_checkbox_preference"
                android:layout="?android:attr/preferenceLayoutChild"
                android:title="@string/title_child_preference"
                android:summary="@string/summary_child_preference" />

    </PreferenceCategory>

</PreferenceScreen>